--- a/index.html
+++ b/index.html
@@ -6,36 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Engineering Portfolio</title>
-    <!-- Add a link to your CSS file here -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Engineering Portfolio</p>
+        <h1>Robrt Way</h1>
     </header>
-
-    <nav>
-        <!-- Navigation Links -->
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Write a brief introduction about yourself, your background, and your interests.</p>
+        <p>Hello! My name is Robert, but feel free to call me Rob.
+            I'm currently in my sophomore year at Texas A&M University,
+            with credits placing me technically as a junior.
+            Though my formal education in computing spans just over a year,
+            I've been passionately developing programs both in and out of the classroom for six years.
+            When I'm not programming, you'll find me running, playing soccer (also known as football), or skateboarding.
+        </p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <!-- List your projects here -->
         <article>
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
+            <p>Projects coming soon...</p>
+            <!--<h3>Project 1</h3> -->
+            <!--<p>Description of project 1.</p> -->
             <!-- Add more details, images, or links as needed -->
         </article>
         <!-- Repeat for more projects -->
@@ -43,12 +39,9 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>How people can reach you. Include your email, LinkedIn profile, or other contact information.</p>
+        <p>robertway@tamu.edu</p>
+        <p></p>
     </section>
-
-    <footer>
-        <p>Copyright © Your Name. All Rights Reserved.</p>
-    </footer>
 </body>
 
 </html>
